--- a/docs/source/fables/山羊.md
+++ b/docs/source/fables/山羊.md
@@ -4,21 +4,19 @@
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 朱庇特答应了母山羊的请求，让她们也长出胡须，但是公山羊对此非常不高兴，抱怨女人无理侵犯他们的权利和尊严。因此，为了反对这一举动，他们派出代表向朱庇特抗议。不过，朱庇特劝他们不要提出任何异议。"一绺毛发能算什么呢？"朱庇特说道，"如果她们想要，就让她们拥有吧。但是她们的力量永远无法与你们匹敌。"
 
 ```{admonition} **寓意**
 :class: tip
-不要在一些小事上过度纠结，可以为他人让步。
-
-<audio src='http://quantile.shangfr.site/fables/audio61_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 不要在一些小事上过度纠结，可以为他人让步。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio61_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE SHE-GOATS AND THEIR BEARDS
 
@@ -26,35 +24,33 @@ Jupiter granted beards to the She-Goats at their own request, much to the disgus
 
 ```{admonition} **Moral**
 :class: tip
-Everyone has their own rights and should be respected for them, regardless of any differences that may be present.
-
-<audio src='http://quantile.shangfr.site/fables/audio61.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Everyone has their own rights and should be respected for them, regardless of any differences that may be present.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio61.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 母山羊与葡萄藤
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只母山羊在葡萄园里闲逛，她看到一株刚刚长出几串葡萄的葡萄藤，就过去吃起了它的嫩叶。葡萄藤对母山羊说："我做过什么对不起你的事吗？难道地上没有青草吃了？即便你吃光了我所有的叶子，让我变成光秃秃的藤，当你被放在祭坛上作为祭祀品时，浇灌到你身上的葡萄酒也全是我产出来的。"
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章暗示, 尽管母山羊做出伤害他人的行为，敌人也可以以恩慈与宽容的态度去面对他，因为在某些情况下，即使被伤害者被做出巨大牺牲，他也能够成为伤害者的福气。
-
-<audio src='http://quantile.shangfr.site/fables/audio122_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章暗示, 尽管母山羊做出伤害他人的行为，敌人也可以以恩慈与宽容的态度去面对他，因为在某些情况下，即使被伤害者被做出巨大牺牲，他也能够成为伤害者的福气。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio122_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE GOAT AND THE VINE
 
@@ -62,35 +58,33 @@ A Goat was straying in a vineyard, and began to browse on the tender shoots of a
 
 ```{admonition} **Moral**
 :class: tip
-Always be kind and generous, even in the face of adversity, as good will often come back to you in unexpected ways.
-
-<audio src='http://quantile.shangfr.site/fables/audio122.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Always be kind and generous, even in the face of adversity, as good will often come back to you in unexpected ways.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio122.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 牧羊人和山羊
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一天，牧羊人赶着羊群回到羊圈里，其中有一只山羊失散了，并且拒绝回到羊群中。牧羊人费了好长时间叫她回来，既大声喊叫，又冲她吹口哨，但是山羊根本没注意到他。于是，牧羊人只得冲她扔了一块石头，正巧打断了山羊的一只羊角。惊慌中，牧羊人肯求山羊不要告诉主人，可山羊却说："你这个愚蠢的家伙，即使我不说，我的角也会告诉他事实呀。"
 
 ```{admonition} **寓意**
 :class: tip
-竭力掩盖无法隐瞒的事实是没用的。
-
-<audio src='http://quantile.shangfr.site/fables/audio207_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 竭力掩盖无法隐瞒的事实是没用的。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio207_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE GOATHERD AND THE GOAT
 
@@ -98,35 +92,33 @@ A Goatherd was one day gathering his flock to return to the fold, when one of hi
 
 ```{admonition} **Moral**
 :class: tip
-It's no use trying to hide what can't be hidden.
-
-<audio src='http://quantile.shangfr.site/fables/audio207.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It's no use trying to hide what can't be hidden.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio207.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 牧羊人和野山羊
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 牧羊人赶着羊群去牧场吃草，他看到几只野山羊混进了羊群里。傍晚，他将所有的羊都赶回家，关进了羊圈。第二天，天气很不好，无法像往常那样到牧场里去放牧了，于是，他只好让羊群待在羊圈里，在那里喂它们吃草。他只给自己的羊一点点刚够果腹的草，却给那些野山羊更多的草吃，因为他希望让那些野山羊留下来。他心想，只要给它们多吃点草，野山羊可能就不想离开他了。等天气转好，牧羊人又赶着所有的羊来到了牧场。刚来到山下，那些野山羊立刻冲出羊群，四散而逃。牧羊人十分生气，指责它们忘恩负义。"你们这些混蛋！"他喊道，"我对你们那么好，竟然以这种方式纷纷逃跑了！"野山羊听到他的话，回过头来说："是的，你对我们很好，实际上是太好了，正因如此，我们才会更加小心。你对待我们这些新来的羊比你自己的羊群还要好，那么很有可能，当另外一群陌生的羊再加入进来时，我们也会受到冷落，而你却只偏爱它们了。"
 
 ```{admonition} **寓意**
 :class: tip
-寓意:耐心待人、平等对待，才能让人留下来，即使你不知晓未来，也应当慎重对待，避免令人失望。
-
-<audio src='http://quantile.shangfr.site/fables/audio276_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 寓意:耐心待人、平等对待，才能让人留下来，即使你不知晓未来，也应当慎重对待，避免令人失望。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio276_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE GOATHERD AND THE WILD GOATS
 
@@ -134,35 +126,33 @@ A Goatherd was tending his goats out at pasture when he saw a number of Wild Goa
 
 ```{admonition} **Moral**
 :class: tip
-The moral of this story is: Treat all people equally and fairly, and don't show favoritism, or those around you may become suspicious and distrustful.
-
-<audio src='http://quantile.shangfr.site/fables/audio276.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The moral of this story is: Treat all people equally and fairly, and don't show favoritism, or those around you may become suspicious and distrustful.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio276.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 两只山羊
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 两只山羊正在山谷的悬崖上高兴地蹦蹦跳跳，碰巧在一个深深的裂缝两边遇到，这里正是一股巨大的山间湍流倾泻而出。一棵倒塌的树干成为唯一穿过裂口的方法，就算两只松鼠也不能安全地彼此擦身而过。这狭窄的小路会让最勇敢的人都战栗。不过我们的山羊就不同了，他们勇往直前，踏上了这条小路，最终惊喜地发现他们可以安全地跨越悬崖。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章寓意是：即使面对极具挑战的情况，勇敢面对困难，并保持进取心，总会有最终的成功与收获。
-
-<audio src='http://quantile.shangfr.site/fables/audio313_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章寓意是：即使面对极具挑战的情况，勇敢面对困难，并保持进取心，总会有最终的成功与收获。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio313_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE TWO GOATS
 
@@ -170,35 +160,33 @@ Two Goats, frisking gayly on the rocky steeps of a mountain valley, chanced to m
 
 ```{admonition} **Moral**
 :class: tip
-It is better to yield than to come to misfortune through stubbornness.
-
-<audio src='http://quantile.shangfr.site/fables/audio313.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is better to yield than to come to misfortune through stubbornness.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio313.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 牧羊人与野山羊
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一个寒冷的暴风雨的日子，一位牧羊人把他的羊驱赶进一个洞穴，里面也有一些野羊找到了藏身之处。牧羊人想把野羊也变成他的羊群，于是他给他们好好喂食。但是他只给自己的羊群提供足够勉强生存的食物。当天气放晴，牧羊人带着羊群出去吃饭，而野羊却跑上山，拒绝接受任何食物。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：无论你如何努力，如果受害者不愿接受帮助，你也拿什么帮助他们。
-
-<audio src='http://quantile.shangfr.site/fables/audio363_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：无论你如何努力，如果受害者不愿接受帮助，你也拿什么帮助他们。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio363_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE GOATHERD AND THE WILD GOATS
 
@@ -206,35 +194,33 @@ One cold stormy day a Goatherd drove his Goats for shelter into a cave, where a 
 
 ```{admonition} **Moral**
 :class: tip
-It is unwise to treat old friends badly for the sake of new ones.
-
-<audio src='http://quantile.shangfr.site/fables/audio363.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is unwise to treat old friends badly for the sake of new ones.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio363.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 牛和山羊
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 牛曾经逃离一只狮子，他进入放牧员用来在暴风雨和夜晚风营的洞穴。碰巧其中有一只山羊落在后面，当牛一进来，那只山羊低头冲向它，撞他的角。因为狮子还围在洞口处，牛只好受到这种侮辱。牛说，别以为我是因为害怕你才服从你的令。等狮子离开，我会给你一只耳光！
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：即使处于被动的地位，也要记住自己的尊严。
-
-<audio src='http://quantile.shangfr.site/fables/audio374_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：即使处于被动的地位，也要记住自己的尊严。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio374_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE BULL AND THE GOAT
 
@@ -242,35 +228,33 @@ A Bull once escaped from a Lion by entering a cave which the Goatherds used to h
 
 ```{admonition} **Moral**
 :class: tip
-It is wicked to take advantage of another's distress.
-
-<audio src='http://quantile.shangfr.site/fables/audio374.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is wicked to take advantage of another's distress.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio374.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 牧羊人与山羊
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只山羊从羊群中走散，被一片三叶草诱惑了。放羊的试图叫它回来，但是毫无作用。它不听他的话。于是他拾起一块石头把它扔了，打破了山羊的角。放羊的害怕了，请求它，“不要告诉主人”。“不，”山羊说，“这断了的角可以替我说话！”
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：说出真相是非常重要的，它可以帮助我们成功。
-
-<audio src='http://quantile.shangfr.site/fables/audio381_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：说出真相是非常重要的，它可以帮助我们成功。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio381_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE GOATHERD AND THE GOAT
 
@@ -278,13 +262,13 @@ A Goat strayed away from the flock, tempted by a patch of clover. The Goatherd t
 
 ```{admonition} **Moral**
 :class: tip
-Wicked deeds will not stay hid.
-
-<audio src='http://quantile.shangfr.site/fables/audio381.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Wicked deeds will not stay hid.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio381.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
