--- a/docs/source/fables/猴子.md
+++ b/docs/source/fables/猴子.md
@@ -4,21 +4,19 @@
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一次，猴子在动物大聚会时跳起舞来，赢得了大家的好感，故而被选为动物之王。然而，狐狸十分嫉妒猴子当选为王。有一天，当他发现一个捕兽夹子里有一块肉时，便把猴子带过去说："我发现这里有些好吃的东西，陛下，但是我没敢动用，因为我认为应该留给国王享用。您能亲自去取吗？"猴子立刻跑过去拿，结果却被夹子夹住了。他斥责狐狸陷害他，而狐狸却笑着说："猴子，你这种笨蛋竟然还想做万兽之王！"
 
 ```{admonition} **寓意**
 :class: tip
-骄傲在败坏以先。
-
-<audio src='http://quantile.shangfr.site/fables/audio53_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 骄傲在败坏以先。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio53_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MONKEY AS KING
 
@@ -26,35 +24,33 @@ At a gathering of all the animals the Monkey danced and delighted them so much t
 
 ```{admonition} **Moral**
 :class: tip
-Pride comes before a fall.
-
-<audio src='http://quantile.shangfr.site/fables/audio53.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio53.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 朱庇特和猴子
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 朱庇特通知森林中所有动物，要给那些他认为拥有最漂亮子孙的动物颁奖。母猴怀里抱着一只扁鼻无毛、相貌丑陋的小猴子，与其它动物一起来到朱庇特那里参加评奖。当大家看到那只小猴子时，发出一阵哄堂大笑。但是，母猴却抱紧了自己的孩子，坚定地说："朱庇特或许会奖励他最喜欢的那一个，但是，我坚定地认为自己的孩子就是最最漂亮的那一个。"
 
 ```{admonition} **寓意**
 :class: tip
-在母亲的眼里都会认为自己的孩子是永远漂亮和美丽的孩子。
-
-<audio src='http://quantile.shangfr.site/fables/audio56_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 在母亲的眼里都会认为自己的孩子是永远漂亮和美丽的孩子。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio56_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## JUPITER AND THE MONKEY
 
@@ -62,35 +58,33 @@ Jupiter issued a proclamation to all the beasts, and offered a prize to the one 
 
 ```{admonition} **Moral**
 :class: tip
-Mother love is blind.
-
-<audio src='http://quantile.shangfr.site/fables/audio56.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Mother love is blind.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio56.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猴子和骆驼
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 在一次百兽集会上，猴子兴奋地载歌载舞，大获赞赏。待表演完后，百兽个个为之喝彩。骆驼十分嫉妒猴子，就想用同样的方式也赢得大家的喝彩。于是，他站了起来，开始显示自己的舞技，他那怪异的姿态真是洋相百出。结果，因为这不雅的表演，百兽们哄他下台，并把他赶跑了。
 
 ```{admonition} **寓意**
 :class: tip
-猴子的表演给大家带来欢乐，但要记住：只有在真正会的技能前提下，才能受到大家的认可，欺骗表面的表演只会得到人们的反对。
-
-<audio src='http://quantile.shangfr.site/fables/audio162_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 猴子的表演给大家带来欢乐，但要记住：只有在真正会的技能前提下，才能受到大家的认可，欺骗表面的表演只会得到人们的反对。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio162_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MONKEY AND THE CAMEL
 
@@ -98,35 +92,33 @@ At a gathering of all the beasts the Monkey gave an exhibition of dancing and en
 
 ```{admonition} **Moral**
 :class: tip
-The moral of the story is to be proud of your own unique talents and abilities, rather than trying to imitate someone else who may appear to be more successful.
-
-<audio src='http://quantile.shangfr.site/fables/audio162.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The moral of the story is to be proud of your own unique talents and abilities, rather than trying to imitate someone else who may appear to be more successful.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio162.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猴子和海豚
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 人类在出海航行时喜欢带上哈巴狗或猴子之类的宠物，以供消遣。一个人从东方回到雅典时，就带了一只猴子随行。当他们靠近阿提卡海岸时，一场风暴突然袭来，船被狂风巨浪打翻了，甲板上的所有人都被抛入水中，人们试着游向岸边，猴子也在其中。一只海豚看见了猴子，以为是人，立即将它驮到背上，游向岸边。当他们快要到达雅典的珀赖欧斯海港时，海豚问那猴子是不是雅典人。猴子回答说是的，而且还补充说自己出身名门望族。"那么，你肯定了解珀赖欧斯了？"海琢接着又问道。猴子以为海豚说的是某个官员或什么人，便回答说："他是我的一个老朋友。"海豚察觉到了猴子的虚伪，十分气愤，便没入水中，不幸的猴子很快就被淹死了。
 
 ```{admonition} **寓意**
 :class: tip
-此文寓意是：虚伪将带来惩罚，真诚才能获得尊重。
-
-<audio src='http://quantile.shangfr.site/fables/audio226_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 此文寓意是：虚伪将带来惩罚，真诚才能获得尊重。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio226_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MONKEY AND THE DOLPHIN
 
@@ -134,35 +126,33 @@ When people go on a voyage they often take with them lap-dogs or monkeys as pets
 
 ```{admonition} **Moral**
 :class: tip
-The moral of this story is that honesty is always the best policy. It is better to be truthful and accept the consequences than to deceive and risk dire consequences.
-
-<audio src='http://quantile.shangfr.site/fables/audio226.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The moral of this story is that honesty is always the best policy. It is better to be truthful and accept the consequences than to deceive and risk dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio226.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猴子和骆驼
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 在为狮王举行的盛大庆祝活动中，猴子被要求跳舞以供宾客欣赏。他的舞蹈非常精彩，动物们都对他的优雅和轻盈都非常满意。猴子所受的赞美使骆驼感到妒忌。他确信自己可以像猴子一样跳得很好，甚至更好，所以他挤进了围着猴子的人群，并且站在后腿上开始跳舞，但是他不能表现出同样优雅的舞蹈。
 
 ```{admonition} **寓意**
 :class: tip
-本文给出的寓意是：妒忌乃是毁灭良知之源，节制你的欲望，做你力所能及的事。
-
-<audio src='http://quantile.shangfr.site/fables/audio318_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 本文给出的寓意是：妒忌乃是毁灭良知之源，节制你的欲望，做你力所能及的事。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio318_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MONKEY AND THE CAMEL
 
@@ -170,35 +160,33 @@ At a great celebration in honor of King Lion, the Monkey was asked to dance for 
 
 ```{admonition} **Moral**
 :class: tip
-Do not try to ape your betters.
-
-<audio src='http://quantile.shangfr.site/fables/audio318.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Do not try to ape your betters.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio318.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猴子和海豚
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 很久以前，有一艘前往雅典的希腊船只在雅典港口毗拉约斯海岸附近沉没了。如果不是当时非常友善的海豚，特别是雅典人的海豚，所有人都会灭亡。但是海豚把沉船的人搭在他们的背上，游到岸上。希腊人在航行时习惯把宠物猴子和狗带上。所以当海豚看到一只猴子在水里挣扎时，他们也把它帮到了岸上。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：友谊可以战胜任何障碍，人类要记住回报友谊和非人类朋友的恩情。
-
-<audio src='http://quantile.shangfr.site/fables/audio337_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：友谊可以战胜任何障碍，人类要记住回报友谊和非人类朋友的恩情。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio337_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MONKEY AND THE DOLPHIN
 
@@ -206,35 +194,33 @@ It happened once upon a time that a certain Greek ship bound for Athens was wrec
 
 ```{admonition} **Moral**
 :class: tip
-One falsehood leads to another.
-
-<audio src='http://quantile.shangfr.site/fables/audio337.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> One falsehood leads to another.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio337.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 朱庇特和猴子
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 从前森林中有只动物的婴儿表演，朱庇特提供了奖品。当然，远近的狼狈母亲都把她们的宝宝们带来参赛了。然而，没有一个比猴子妈妈早到。她骄傲地在其他参赛者中呈现她的孩子。正如你所想，当动物们看到这只丑陋的鼻子扁扁的，无毛的，眼睛瞪大的小生物时，这里爆发出了一声嗤笑。
 
 ```{admonition} **寓意**
 :class: tip
-寓意：即使当别人看到你不被认可的特性时会大笑，依然要坚持自己的自信。
-
-<audio src='http://quantile.shangfr.site/fables/audio415_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 寓意：即使当别人看到你不被认可的特性时会大笑，依然要坚持自己的自信。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio415_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## JUPITER AND THE MONKEY
 
@@ -242,13 +228,13 @@ There was once a baby show among the Animals in the forest. Jupiter provided the
 
 ```{admonition} **Moral**
 :class: tip
-Mother love is blind.
-
-<audio src='http://quantile.shangfr.site/fables/audio415.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Mother love is blind.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio415.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
