--- a/docs/source/fables/青蛙.md
+++ b/docs/source/fables/青蛙.md
@@ -4,21 +4,19 @@
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 几个淘气的孩子在水池边玩耍，浅水中正在游泳的几只青蛙映入了他们的眼帘，他们便用石头去打青蛙，以此作为消遣娱乐。甚至于，他们还打死了几只青蛙。最后，一只青蛙从水中伸出头来，说："住手！住手！求你们不要再打了。对你们来说，这是一个活动，可是对于我们来说，却是致命一击啊。"
 
 ```{admonition} **寓意**
 :class: tip
-人们应该学会尊重他人，懂得保护他人的权利，不要肆意破坏他人的生活环境。
-
-<audio src='http://quantile.shangfr.site/fables/audio20_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 人们应该学会尊重他人，懂得保护他人的权利，不要肆意破坏他人的生活环境。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio20_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE BOYS AND THE FROGS
 
@@ -26,35 +24,33 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 
 ```{admonition} **Moral**
 :class: tip
-we should always respect the life of creatures that are different from us and be mindful of the consequences of our actions.
-
-<audio src='http://quantile.shangfr.site/fables/audio20.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> we should always respect the life of creatures that are different from us and be mindful of the consequences of our actions.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio20.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 野兔与青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一次，众多野兔聚集在一起，哀悼自己的不幸命运，方方面面都遭遇危险，而他们却缺乏勇气和力量去掌握自己的命运。人、狗、鸟类和猛兽等都是他们的敌人，整日屠杀吞噬他们。一想到要忍受这样的迫害，他们都认为还不如一死了之呢。于是，他们下定决心、不顾一切地来到附近的池塘边，准备投水自尽。有一群青蛙正围坐在池塘边，听到兔子们那急促的跑步声后，青蛙们立即纷纷跳入水中。兔子中，有一只年长的兔子比同伴们聪明一些，"朋友们，快停下来，我们应该振作起来，不要再自寻短见了！你们看，这里还有一些害怕我们的动物呢，他们肯定比我们更胆小！"
 
 ```{admonition} **寓意**
 :class: tip
-不要因为一些不愉快和挫折就去逃避,适当的时候我们可以想想还有很多不如我们的人,我们应该努力,改正自己的不足,增加自信感。
-
-<audio src='http://quantile.shangfr.site/fables/audio24_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 不要因为一些不愉快和挫折就去逃避,适当的时候我们可以想想还有很多不如我们的人,我们应该努力,改正自己的不足,增加自信感。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio24_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE HARES AND THE FROGS
 
@@ -62,35 +58,33 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 
 ```{admonition} **Moral**
 :class: tip
-It is important to recognize that others may be more scared of you than you are of them, and that being brave may help you overcome difficulties.
-
-<audio src='http://quantile.shangfr.site/fables/audio24.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is important to recognize that others may be more scared of you than you are of them, and that being brave may help you overcome difficulties.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio24.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 抱怨太阳的青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一次，太阳想给自己找个老婆。青蛙们惊恐地冲着天空大喊，朱庇特听到吵闹声，就问他们在冲着谁哇哇乱叫。他们回答说："即便是单身，太阳已经够坏了，几乎晒干了我们的沼泽地，要是他再结了婚，并且再生下一个小太阳的话，我们该怎么办呀？"
 
 ```{admonition} **寓意**
 :class: tip
-毫无根据的抱怨,只会惹人耻笑。
-
-<audio src='http://quantile.shangfr.site/fables/audio33_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 毫无根据的抱怨,只会惹人耻笑。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio33_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FROGS' COMPLAINT AGAINST THE SUN
 
@@ -98,35 +92,33 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 
 ```{admonition} **Moral**
 :class: tip
-Watch the actions of your enemy.
-
-<audio src='http://quantile.shangfr.site/fables/audio33.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Watch the actions of your enemy.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio33.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 庸医青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 从前，有一只青蛙从他那湿地中的家里蹦了出来，向所有的动物宣称自己是一个博学多才的医生，精通于药学，能治百病。其中，有一只狐狸问他："你这样的医生，连自己的跛足和斑驳起皱的皮都治不好，怎么还敢吹牛说能给别人治病呢？"
 
 ```{admonition} **寓意**
 :class: tip
-要医人，先医己。
-
-<audio src='http://quantile.shangfr.site/fables/audio64_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 要医人，先医己。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio64_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE QUACK FROG
 
@@ -134,35 +126,33 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 
 ```{admonition} **Moral**
 :class: tip
-Physician, heal thyself.
-
-<audio src='http://quantile.shangfr.site/fables/audio64.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Physician, heal thyself.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio64.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 老鼠、青蛙和老鹰
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只老鼠与一只青蛙建立起了友谊。但是他们并非十分相配，因为老鼠完全生活在陆地上，而青蛙则除了陆地上的生活外，还时常在水中生活。为了永远不分开，青蛙用一根绳子把自己的腿和老鼠的腿绑在了一起。他们在干燥的地面上行走时，一切都正常，可是当他们来到池塘边时，青蛙带着老鼠一起跳进了水里，一边游泳，一边高兴得呱呱大叫。然而，可怜的老鼠很快就被淹死了，并且尾随着青蛙漂浮在水面。这时，一只鹰发现了老鼠，猛然冲向水面，用鹰爪把他抓了起来。青蛙无法松开与老鼠绑在一起的绳结，于是也一同被抓走，成了老鹰的美食。
 
 ```{admonition} **寓意**
 :class: tip
-要学会多为他人考虑一下，不能只考虑自己的得失利益。
-
-<audio src='http://quantile.shangfr.site/fables/audio66_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 要学会多为他人考虑一下，不能只考虑自己的得失利益。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio66_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MOUSE, THE FROG, AND THE HAWK
 
@@ -170,72 +160,68 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 
 ```{admonition} **Moral**
 :class: tip
-It is important to recognize the limits of a relationship and to act within those limits for the safety and well-being of both parties.
-
-<audio src='http://quantile.shangfr.site/fables/audio66.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is important to recognize the limits of a relationship and to act within those limits for the safety and well-being of both parties.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio66.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 青蛙求王
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 因为缺少一个统领者，青蛙们大为不悦。于是，他们派了一个代表去拜见朱庇特，请求赐给他们一个国王。朱庇特不屑于他们如此愚蠢的请求，便将一根木头扔到青蛙居住的池塘中，并且说这就是他们的国王。刚听到木头落下的声音时，青蛙们都吓了一大跳，纷纷潜入池塘深处；没过多久，当他们发现木头依旧静止在那里时，一个接一个地又游出水面来；不久之后，他们愈发大胆了，发现木头没什么了不起的，甚至于爬上木块，坐在它的上面。他们认为这样一个国王简直是对自己尊严的侮辱，于是又去求见朱庇特，请求把赐予他们的这个木头疙瘩拿走，再换一个更好的国王。朱庇特对此十分生气，便派了一只鹳去管制青蛙。结果，鹳一来到池塘里，便开始全力逮吃青蛙。
 
 ```{admonition} **寓意**
 :class: tip
-莽撞的请求常常会带来反作用，你所得到的正是你自己所请求的，但未必会是你想要的结果。
-
-<audio src='http://quantile.shangfr.site/fables/audio75_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 莽撞的请求常常会带来反作用，你所得到的正是你自己所请求的，但未必会是你想要的结果。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio75_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FROGS ASKING FOR A KING
 
-Time was when the Frogs were discontented because they had no one to rule over them: so they sent a deputation to Jupiter to ask him to give them a King. Jupiter, despising the folly of their request, cast a log into the pool where they lived, and said that that should be their King. The Frogs were terrified at first by the splash, and scuttled away into the deepest parts of the pool; but by and by, when they saw that the log remained motionless, one by one they ventured to the surface again, and before long, growing bolder, they began to feel such contempt for it that they even took to sitting upon it.
+Time was when the Frogs were discontented because they had no one to rule over them: so they sent a deputation to Jupiter to ask him to give them a King. Jupiter, despising the folly of their request, cast a log into the pool where they lived, and said that that should be their King. The Frogs were terrified at first by the splash, and scuttled away into the deepest parts of the pool; but by and by, when they saw that the log remained motionless, one by one they ventured to the surface again, and before long, growing bolder, they began to feel such contempt for it that they even took to sitting upon it.
 Thinking that a King of that sort was an insult to their dignity, they sent to Jupiter a second time, and begged him to take away the sluggish King he had given them, and to give them another and a better one. Jupiter, annoyed at being pestered in this way, sent a Stork to rule over them, who no sooner arrived among them than he began to catch and eat the Frogs as fast as he could.
 
 ```{admonition} **Moral**
 :class: tip
-When you seek to change your condition, be sure that you can better it.
-
-<audio src='http://quantile.shangfr.site/fables/audio75.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> When you seek to change your condition, be sure that you can better it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio75.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 牛和青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 两只小青蛙在池塘边玩耍时，一头公牛走到水边去喝水，结果不小心踩扁了其中一只小青蛙，使其当场毙命。青蛙妈妈发现小青蛙不见了，便问另一只小青蛙，他的兄弟到哪里去了。"妈妈，他死了。"小青蛙说，"今天上午有一个长着四只脚的巨型怪物来到水塘边，把我的兄弟踩进了泥巴里。""巨型兽？是不是这么大？"青蛙妈妈一边问，一边尽力鼓气，让自己尽量变大一些。"嗯，是的，比这还要大。"小青蛙说。青蛙妈妈再鼓了鼓气，问道："是不是这般大小呢？""对，妈妈，比这个还要再大一些。"小青蛙说。于是，青蛙妈妈又使劲鼓气，几乎快成了一个圆球。"有这么大......"还没等她说完，就把肚子胀破了。
 
 ```{admonition} **寓意**
 :class: tip
-自量力的人，最终会惨遭失败。
-
-<audio src='http://quantile.shangfr.site/fables/audio99_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 自量力的人，最终会惨遭失败。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio99_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE OX AND THE FROG
 
@@ -243,35 +229,33 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 
 ```{admonition} **Moral**
 :class: tip
-Pride comes before a fall.
-
-<audio src='http://quantile.shangfr.site/fables/audio99.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio99.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 两只青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 两只青蛙比邻而居。一只住在青蛙们钟爱的湿地里，另一只却住在稍微远一点的一条小路上，只有下过雨后，那里才能形成一个小水洼。住在湿地里的青蛙提醒并督促自己的朋友，尽快搬到湿地这边来住，因为这里十分舒适，更重要的是，这里更安全。可是，另一只青蛙却拒绝了，说自己不想离开已经习惯了的地方。结果，没过几天，一辆载着重物的货车经过小路，而这只青蛙不幸被车轮碾死了。
 
 ```{admonition} **寓意**
 :class: tip
-本文突出的是：经常换个环境，保护自己的安全，不要停留在同一个地方，避免造成不必要的损失。
-
-<audio src='http://quantile.shangfr.site/fables/audio156_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 本文突出的是：经常换个环境，保护自己的安全，不要停留在同一个地方，避免造成不必要的损失。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio156_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE TWO FROGS
 
@@ -279,35 +263,33 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 
 ```{admonition} **Moral**
 :class: tip
-Moral: Change can be uncomfortable, but it can also save your life.
-
-<audio src='http://quantile.shangfr.site/fables/audio156.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Moral: Change can be uncomfortable, but it can also save your life.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio156.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 青蛙和水井
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 两只青蛙住在一片沼泽地里。在一个炎热的夏季，沼泽地干涸了，他们不得不去寻找另一块湿地，因为他们很喜欢潮湿的地方。不久，他们找到了一口深井，其中一只青蛙向下看了看，对另一只说："看上去，这是个凉快的好地方，我们跳进去，就住在这里吧。"而另一只青蛙头脑比较聪明，回答说："别着急，朋友，如果这口井也干了的话，我们可怎么出来呢？"
 
 ```{admonition} **寓意**
 :class: tip
-凡事应三思而后行。
-
-<audio src='http://quantile.shangfr.site/fables/audio200_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 凡事应三思而后行。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio200_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FROGS AND THE WELL
 
@@ -315,35 +297,33 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 
 ```{admonition} **Moral**
 :class: tip
-Think twice before you act.
-
-<audio src='http://quantile.shangfr.site/fables/audio200.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Think twice before you act.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio200.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 青蛙和牛
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一头牛来到长着芦苇的池塘喝水。它噗通一声跳进水里，碰巧把一只小青蛙踩进了泥里。老青蛙们很快就发现了这只小青蛙不见了，问他的兄弟姐妹发生了什么事。有一只青蛙说：一只大怪物踩着小弟弟的一只大脚。“好大啊！”老青蛙咆哮着，“它跟我这么大吗？”“更大！”小青蛙们立即回答。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：不要尝试不可能的事情。
-
-<audio src='http://quantile.shangfr.site/fables/audio282_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：不要尝试不可能的事情。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio282_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FROGS AND THE OX
 
@@ -351,35 +331,33 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 
 ```{admonition} **Moral**
 :class: tip
-Do not attempt the impossible.
-
-<audio src='http://quantile.shangfr.site/fables/audio282.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Do not attempt the impossible.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio282.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 男孩们和青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一天，有几个男孩在一个池塘边玩耍，池塘里住着一家青蛙。男孩们玩的游戏就是把石头扔进池塘，让它们飞跃水面。石头飞来飞去，男孩们玩得很开心；可池塘里的可怜的青蛙们吓得直发抖。最后，池塘里最大最勇敢的一只青蛙把头从水里伸了出来，它说：“就算你们怎么玩，也不要把石头扔到我身上来！”
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：尊重他人，不要做伤害别人的事情。
-
-<audio src='http://quantile.shangfr.site/fables/audio308_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：尊重他人，不要做伤害别人的事情。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio308_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE BOYS AND THE FROGS
 
@@ -387,35 +365,33 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 
 ```{admonition} **Moral**
 :class: tip
-Always stop to think whether your fun may not be the cause of another's unhappiness.
-
-<audio src='http://quantile.shangfr.site/fables/audio308.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Always stop to think whether your fun may not be the cause of another's unhappiness.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio308.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 兔子和青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 你知道，野兔非常胆小，最轻微的阴影就会让它们惊恐地跑往藏身处。一次它们决定宁死不辱而生活在如此悲惨的状态。但当他们正在讨论如何最好地迎接死亡时，他们觉得听到了一些噪音，立刻便奔向兔穴。在前往的路上，他们经过一个池塘，靠岸的芦苇中有一只乌鸦在象征着死亡。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：即使面临最艰难的情况，生命依旧具有可贵的价值，抓住机会，不要轻易放弃希望。
-
-<audio src='http://quantile.shangfr.site/fables/audio325_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：即使面临最艰难的情况，生命依旧具有可贵的价值，抓住机会，不要轻易放弃希望。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio325_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE HARES AND THE FROGS
 
@@ -423,35 +399,33 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 
 ```{admonition} **Moral**
 :class: tip
-However unfortunate we may think we are there is always someone worse off than ourselves.
-
-<audio src='http://quantile.shangfr.site/fables/audio325.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> However unfortunate we may think we are there is always someone worse off than ourselves.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio325.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 争斗的公牛和青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 两头公牛在一片田野里激烈地打斗，其中一边是一片沼泽地。一只住在沼泽里的老青蛙，看到这场激烈的战斗，吓得战战兢兢。“你怕什么？”一只小青蛙问。“你没看到吗？”老青蛙回答，“被打败的公牛会被赶离那里的良好的饲料，到这片沼泽地的芦苇里，然后我们都要饿死嘛！”
 
 ```{admonition} **寓意**
 :class: tip
-寓意：无论环境发生什么变化，我们都要有警惕的眼睛，对未来充满准备，以免被不利影响。
-
-<audio src='http://quantile.shangfr.site/fables/audio359_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 寓意：无论环境发生什么变化，我们都要有警惕的眼睛，对未来充满准备，以免被不利影响。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio359_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FIGHTING BULLS AND THE FROG
 
@@ -459,35 +433,33 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 
 ```{admonition} **Moral**
 :class: tip
-When the great fall out, the weak must suffer for it.
-
-<audio src='http://quantile.shangfr.site/fables/audio359.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> When the great fall out, the weak must suffer for it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio359.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 青蛙和老鼠
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只寻求冒险的小老鼠在一个池塘边上奔跑，池塘边上有一只青蛙。当青蛙看到老鼠时，它游到岸边咕哝道：“你要不要来参观一下？如果你来，我可以保证你有一次极好的经历。”老鼠由于急于看看这个世界和它所有的东西，也不需要多劝说，但它只会游泳一段距离，然后就转头回到岸上来。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：勇敢追求梦想即使只是走出一小步，也可能带来意想不到的结果。
-
-<audio src='http://quantile.shangfr.site/fables/audio370_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：勇敢追求梦想即使只是走出一小步，也可能带来意想不到的结果。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio370_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FROG AND THE MOUSE
 
@@ -495,35 +467,33 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 
 ```{admonition} **Moral**
 :class: tip
-Those who seek to harm others often come to harm themselves through their own deceit.
-
-<audio src='http://quantile.shangfr.site/fables/audio370.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Those who seek to harm others often come to harm themselves through their own deceit.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio370.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 蹩脚的青蛙
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只老蟾蛙曾经通知所有邻居，他是一名有学识的医生。事实上，他能治愈任何疾病。狐狸听到这个消息后，急忙去看蟾蛙。他仔细地打量了蟾蛙。老蟾蛙，他说，听说你能治疗任何疾病！不过你看看自己，然后试试你自己的药物。如果你能治好你自己的那种斑痕，你就可以治愈所有邻居的疾病。
 
 ```{admonition} **寓意**
 :class: tip
-此文的寓意是：只有自己精神和身体健康之后，才能真正帮助他人。
-
-<audio src='http://quantile.shangfr.site/fables/audio386_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 此文的寓意是：只有自己精神和身体健康之后，才能真正帮助他人。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio386_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE QUACK TOAD
 
@@ -531,13 +501,13 @@ An old Toad once informed all his neighbors that he was a learned doctor. In fac
 
 ```{admonition} **Moral**
 :class: tip
-Those who would mend others, should first mend themselves.
-
-<audio src='http://quantile.shangfr.site/fables/audio386.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Those who would mend others, should first mend themselves.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio386.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
