--- a/docs/source/fables/公鸡.md
+++ b/docs/source/fables/公鸡.md
@@ -4,21 +4,19 @@
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 几个小偷悄悄地溜进一户人家里，那家人除了一只公鸡之外什么也没有，于是，小偷便偷走了那只公鸡。当小偷们要杀鸡吃肉时，其中一个小偷抓住了公鸡，准备割断他的脖子，这时，公鸡可怜巴巴地说："求求你别杀我，你会发现我是一只很有用的鸡，我会忠诚地在清晨叫醒人类。"但是，小偷们回答说："我当然知道你的作用了，就是因为你把人们都叫醒了，才让我们难以生存。你就快点下油锅吧！"
 
 ```{admonition} **寓意**
 :class: tip
-那些对于好人有益的事正是对于坏人有害的。
-
-<audio src='http://quantile.shangfr.site/fables/audio54_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 那些对于好人有益的事正是对于坏人有害的。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio54_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE THIEVES AND THE COCK
 
@@ -26,35 +24,33 @@ Some Thieves broke into a house, and found nothing worth taking except a Cock, w
 
 ```{admonition} **Moral**
 :class: tip
-One should not be too quick to judge someone for the consequences of their actions without taking into account their intentions.
-
-<audio src='http://quantile.shangfr.site/fables/audio54.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> One should not be too quick to judge someone for the consequences of their actions without taking into account their intentions.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio54.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 老鹰和公鸡
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 两只公鸡生活在同一个场院里，为争当主人而打了起来。战争结束后，落败的一方躲进了一个黑暗的角落；而胜者则飞到棚顶上兴奋地大喊大叫。然而，一只鹰突然从天而降，冲下来抓走了他。这时，那只被打败的公鸡立刻从角落里跑出来，独自占领了整个鸡窝。
 
 ```{admonition} **寓意**
 :class: tip
-骄兵必败。
-
-<audio src='http://quantile.shangfr.site/fables/audio142_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 骄兵必败。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio142_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE EAGLE AND THE COCKS
 
@@ -62,35 +58,33 @@ There were two Cocks in the same farmyard, and they fought to decide who should 
 
 ```{admonition} **Moral**
 :class: tip
-Pride comes before a fall.
-
-<audio src='http://quantile.shangfr.site/fables/audio142.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Pride comes before a fall.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio142.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 公鸡和宝石
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只公鸡在田野里觅食，突然发现了一块宝玉，不知是谁不小心掉在这里了。公鸡说道："哇，你可真漂亮，要是你的主人找到了你，肯定会喜出望外。不过，对我来说，你却毫无用处。与其得到世界上的所有珠宝，还不如得到一颗麦子更好。"
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章寓意是：最了解自己的需要和情况的人，才是最懂得珍惜真正的宝贵的东西。
-
-<audio src='http://quantile.shangfr.site/fables/audio149_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章寓意是：最了解自己的需要和情况的人，才是最懂得珍惜真正的宝贵的东西。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio149_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE COCK AND THE JEWEL
 
@@ -98,35 +92,33 @@ A Cock, scratching the ground for something to eat, turned up a Jewel that had b
 
 ```{admonition} **Moral**
 :class: tip
-Moral: Contentment is better than riches. True happiness comes from within and not from material possessions.
-
-<audio src='http://quantile.shangfr.site/fables/audio149.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Moral: Contentment is better than riches. True happiness comes from within and not from material possessions.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio149.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 捕鸟人、鹧鸪和公鸡
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一天，当捕鸟人正坐在餐桌边吃着仅有香草和面包的晚餐时，一个朋友不期而至。食品柜已经空了，于是捕鸟人跑出去捉那只驯养的鹧鸪，它可是一直被当做诱饵留下来的。就在捕鸟人要拧断她的脖子时，鹧鸪大喊道："你确定要杀了我吗？为什么，要是没有我，你下次捕鸟时该怎么办呢？你如何能吸引那些鸟儿走到你的网里来呢？"听了这番话，捕鸟人就放了鹧鸪，走到鸡舍那边，准备去捉那只胖乎乎的小公鸡。公鸡看到自己将要成为下一个被杀的目标，也求主人饶命，并且说："如果你杀了我，怎么能知道夜晚的时间呢？谁能在清晨唤醒你，到时候该去干活了呢？"然而，捕鸟人却回答说："我知道，你的确能告诉我时间，尽管如此，我也不能让朋友饿着肚子去睡觉呀。"随后，他便捉住公鸡，拧断了它的脖子。
 
 ```{admonition} **寓意**
 :class: tip
-本文讲述的是一个贪婪的故事，捕鸟人想为自己和朋友准备晚餐，但当面对家中的牲畜时，他犹豫不决。不管是鹧鸪还是公鸡，它们都以智慧和温暖的话语希望保全自己的生命，但捕鸟人最终还是为了自己的贪婪，选择了杀死公鸡。这篇文章寓意是：贪婪容易让人忽
-
-<audio src='http://quantile.shangfr.site/fables/audio244_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 本文讲述的是一个贪婪的故事，捕鸟人想为自己和朋友准备晚餐，但当面对家中的牲畜时，他犹豫不决。不管是鹧鸪还是公鸡，它们都以智慧和温暖的话语希望保全自己的生命，但捕鸟人最终还是为了自己的贪婪，选择了杀死公鸡。这篇文章寓意是：贪婪容易让人忽  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio244_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE FOWLER, THE PARTRIDGE, AND THE COCK
 
@@ -134,13 +126,13 @@ One day, as a Fowler was sitting down to a scanty supper of herbs and bread, a f
 
 ```{admonition} **Moral**
 :class: tip
-Moral: Never sacrifice a long-term benefit for a short-term gain.
-
-<audio src='http://quantile.shangfr.site/fables/audio244.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Moral: Never sacrifice a long-term benefit for a short-term gain.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio244.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
