--- a/docs/source/fables/猫.md
+++ b/docs/source/fables/猫.md
@@ -4,21 +4,19 @@
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 从前，有一座房子，里面的老鼠泛滥成灾。一只猫听到此事，便自言自语："那正是我要去的地方。"于是她走到那座房子里住下来，一只接一只地抓老鼠，然后吃掉他们。最后，老鼠们再也无法忍受下去，决定躲到自己的洞里，再也不出来。"这还真不好办了，"猫自言自语道，"若想骗他们出来，只能耍个花招了。"她琢磨了一会儿，然后爬上墙，用后腿钩住木桩倒挂下来，假装已经死了。过了一会儿，一只老鼠向外窥探，看到了挂在那里的猫。"啊哈！"老鼠大叫，"夫人，你还真聪明，不过，就算你假装成一袋粮食挂在那里，你也骗不了我们去接近你。"
 
 ```{admonition} **寓意**
 :class: tip
-如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。
-
-<audio src='http://quantile.shangfr.site/fables/audio2_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 如果有足够的智慧，面对那些曾认定的危险人物所假装出的无辜，你也不会上当受骗。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE CAT AND THE MICE
 
@@ -26,35 +24,33 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 ```{admonition} **Moral**
 :class: tip
-If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.
-
-<audio src='http://quantile.shangfr.site/fables/audio2.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> If you are wise you won't be deceived by the innocent airs of those whom you have once found to be dangerous.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猫和鸟
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 有一只猫，闻言某处鸟舍里的鸟儿们全都生病了。于是，他便扮作医生，带着医生所使用的专业器具，装模作样地来到鸟房前，假装问候里面的鸟儿身体状况。"我们都很健康，"鸟儿们回答说，并没有让猫进去，"一看到你的大尾巴，我们就全好了。"
 
 ```{admonition} **寓意**
 :class: tip
-骗子会伪装自己，但决骗不过聪明人。
-
-<audio src='http://quantile.shangfr.site/fables/audio12_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 骗子会伪装自己，但决骗不过聪明人。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE CAT AND THE BIRDS
 
@@ -62,35 +58,33 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 ```{admonition} **Moral**
 :class: tip
-A villain may disguise himself, but he will not deceive the wise.
-
-<audio src='http://quantile.shangfr.site/fables/audio12.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> A villain may disguise himself, but he will not deceive the wise.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猫头鹰和百鸟
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 猫头鹰是一种非常聪明的鸟。很久以前，第一只猫头鹰开始在森林里扎根繁衍时，她召集起所有的鸟类，对他们说："你们看到这棵小树了吗？要是愿意听从我的建议，在它还没长成大树之前，就先毁掉它。因为当它长成参天大树之后，就会出现槲寄生，继而你们就等着被专门捕鸟的粘圈毁灭吧。"当亚麻种子第一次出现在森林里时，她又对鸟儿们说："去吃掉那些种子，因为这是亚麻种子，要是没有亚麻，人类就无法织网来捕鸟了。"还有一次，当她第一次看到弓箭手时，就提醒鸟儿们注意这是它们的死敌，因为人们会用带有鸟类羽毛的箭来射死鸟类。但是，鸟儿们并没有将她的话放在心上，正相反，鸟儿们还嘲笑她是个疯子。然而，当事实正如猫头鹰预言的那样依次出现时，鸟儿们开始改变自己的思想了，并且大大佩服并赞赏猫头鹰的智慧。由此，只要猫头鹰一出现，鸟儿们就会趋之若鹜，想听到一些对自己有益的忠言。不过，猫头鹰已经不再提出忠告，而只是百无聊赖地坐在那里，沉浸在自己心中的遐想之中。
 
 ```{admonition} **寓意**
 :class: tip
-要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。
-
-<audio src='http://quantile.shangfr.site/fables/audio59_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 要仔细观察环境并拥有敏锐的观察力，以免上当受骗，犯下不可弥补的错误。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE OWL AND THE BIRDS
 
@@ -98,35 +92,33 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 ```{admonition} **Moral**
 :class: tip
-Heed wise counsel, lest you suffer the consequences of your folly.
-
-<audio src='http://quantile.shangfr.site/fables/audio59.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Heed wise counsel, lest you suffer the consequences of your folly.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猫和公鸡
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只猫抓到一只公鸡，并想方设法找出一个借口好吃掉他，因为不吃鸡是猫的一贯传统，而她也知道自己不应该吃鸡。最后，猫说："你总在夜晚打鸣，让人们不能好好睡觉，所以，我要吃掉你。"但是，公鸡却辩解说，自己为了人们的利益而叫醒他们，可使人们按时起床工作，若是没有了鸡，人们就无法准时起床工作了。"有点道理，"猫回答说，"不过，不管他们能不能准时开始工作，我总不能没有饭吃。"于是，猫就吃掉了公鸡。
 
 ```{admonition} **寓意**
 :class: tip
-带有好借口的欲望，永远不会让坏人免于恶行。
-
-<audio src='http://quantile.shangfr.site/fables/audio114_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 带有好借口的欲望，永远不会让坏人免于恶行。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE CAT AND THE COCK
 
@@ -134,35 +126,33 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 ```{admonition} **Moral**
 :class: tip
-The want of a good excuse never kept a villain from crime.
-
-<audio src='http://quantile.shangfr.site/fables/audio114.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The want of a good excuse never kept a villain from crime.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 鹰、猫和野猪
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只老鹰在一棵大橡树的高枝上安了家；一只猫和她的孩子们在这棵树的树干上霸占了一个树洞；一只野猪则带着小猪崽住进了树根处的洞里。若不是猫诡计多端，他们可能会成为很好的邻居。猫先爬到老鹰的巢边，说："你和我都很危险呀！树下那头野猪，天天在树根处挖土，怕是想把这棵树连根拔掉，好轻而易举地吃掉我们的孩子。"猫用这番话吓唬了老鹰之后，又爬下来对野猪说："我必须要警告你，小心那只可怕的老鹰。她可是一直在伺机飞下来抓走你的孩子们，去喂小鹰。"猫也像吓唬老鹰那样，狠狠地吓唬了野猪一番。然后，她假装自己也很害怕，躲进了自己的树洞，当日再也没出来。到了晚上，她则偷偷地跑出去为孩子们寻找食物。老鹰吓得不敢离开自己的巢，野猪也吓得不敢走出洞来。就这样，老鹰和野猪以及他们的孩子都饿死了，而猫则用老鹰、野猪及其幼崽的尸体养大了自己的孩子。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。
-
-<audio src='http://quantile.shangfr.site/fables/audio133_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章揭示了诡计阴险的危险，只有诚实和互信才能保证我们的幸福与安宁。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE EAGLE, THE CAT,AND THE WILD SOW
 
@@ -170,35 +160,33 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 ```{admonition} **Moral**
 :class: tip
-The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.
-
-<audio src='http://quantile.shangfr.site/fables/audio133.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The moral of this story is to be wary of trusting those who make false claims for their own benefit. Manipulating the truth can lead to disastrous consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 维纳斯和猫
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只母猫爱上了一个英俊的青年男子，请求爱神维纳斯将自己变成一个女人。仁慈的爱神维纳斯同意了她的请求，立即将她变成了一个美丽的少女。青年男子对她一见钟情，很快两人就结婚了。有一天，维纳斯想去看看那只变身后的猫是否也改变了以往的习性，便将一只老鼠放进了他们的房子里。年轻女子把现在的身份忘得一干二净，一见到老鼠，便立刻跳下床去追。爱神见此十分气愤，又将母猫变回了原来的模样。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。
-
-<audio src='http://quantile.shangfr.site/fables/audio145_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：即使发生了惊人的改变，本性难移，要保持自我，不要迷失自我。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## VENUS AND THE CAT
 
@@ -206,72 +194,68 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 ```{admonition} **Moral**
 :class: tip
-The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.
-
-<audio src='http://quantile.shangfr.site/fables/audio145.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The moral of this story is to be careful what you wish for, as it may not lead to the outcome you desire.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 蚂蚱和猫头鹰
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 栖息在一棵枯树上的猫头鹰，习惯于晚上觅食、白天睡觉。可是，她白天却也睡不好，一只早已在树丛间做窝的蚂蚱总发出啁啾声，吵得她无法入睡。猫头鹰不断地请求蚂蚱考虑一下她的情况，可蚂蚱却仍然大声叫个不停。最后，猫头鹰再也受不了了，决定设计除掉蚂蚱。于是，猫头鹰装出一副高兴样，对蚂蚱说："尽管我被你的歌声惊扰，睡不着觉，但是请相信我，你的歌声如同阿波罗神的七弦琴一样动听。我正想喝一点美味琼浆，这可是密涅瓦（智慧女神，即希腊神话中的雅典娜）送给我的。你要不要上来和我一起享用呢？"蚂蚱正得意于猫头鹰对自己歌声的奉承，一听到有琼浆玉液，嘴巴里就开始流口水了，所以，他很高兴地接受了邀请。待他刚一飞上去，猫头鹰就从树洞中冲出来，扑过去抓住蚂蚱，吃掉了他。
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。
-
-<audio src='http://quantile.shangfr.site/fables/audio153_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章寓意是：当遇到困扰，聪明人会想出一个狡猾的解决方案来解决问题，以及及早采取行动是解决难题的关键。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE GRASSHOPPER AND THE OWL
 
-An Owl, who lived in a hollow tree, was in the habit of feeding by night and sleeping by day; but her slumbers were greatly disturbed by the chirping of a Grasshopper, who had taken up his abode in the branches. She begged him repeatedly to have some consideration for her comfort, but the Grasshopper, if anything, only chirped the louder. At last the Owl could stand it no longer, but determined to rid herself of the pest by means of a trick.
+An Owl, who lived in a hollow tree, was in the habit of feeding by night and sleeping by day; but her slumbers were greatly disturbed by the chirping of a Grasshopper, who had taken up his abode in the branches. She begged him repeatedly to have some consideration for her comfort, but the Grasshopper, if anything, only chirped the louder. At last the Owl could stand it no longer, but determined to rid herself of the pest by means of a trick.
 Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I cannot sleep for your song, which, believe me, is as sweet as the notes of Apollo's lyre, I have a mind to taste some nectar, which Minerva gave me the other day. Won't you come in and join me?" The Grasshopper was flattered by the praise of his song, and his mouth, too, watered at the mention of the delicious drink, so he said he would be delighted. No sooner had he got inside the hollow where the Owl was sitting than she pounced upon him and ate him up.
 
 ```{admonition} **Moral**
 :class: tip
-Moral: Do not be deceived by flattery; it can lead to dire consequences.
-
-<audio src='http://quantile.shangfr.site/fables/audio153.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Moral: Do not be deceived by flattery; it can lead to dire consequences.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 鹦鹉和猫
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 从前，有个人买了一只鹦鹉，让它在房子里自由自在地生活。这只鹦鹉欣喜若狂，高兴地飞上了壁炉架，尽情地叫着。一只猫正在壁炉前的地毯上睡觉，鹦鹉的吵闹声惊扰了她。看着这个刚来的入侵者，猫问道："你是谁，从哪里来的？"鹦鹉回答道："你的主人刚刚买了我，带我来到这个房子里。""你这个放肆无礼的家伙，"猫说，"怎么刚到这里就这么吵闹呢？我可是在这里出生的，而且一直住在这个家里。但即便如此，如果我冒险喵喵地叫几声，主人就会朝我扔东西，到处追着赶我出去。"鹦鹉回答说："喂，你最好赶快闭上嘴。我的声音多么悦耳动听呀，他们可都喜欢；而你的叫声，实在是一种噪音。"
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。
-
-<audio src='http://quantile.shangfr.site/fables/audio239_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章的寓意是：不要滥用特权，新人要尊重老人，面对新环境也要懂得适应。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE PARROT AND THE CAT
 
@@ -279,37 +263,35 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 
 ```{admonition} **Moral**
 :class: tip
-Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.
-
-<audio src='http://quantile.shangfr.site/fables/audio239.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Moral of the story: Speak with respect at all times, because the way you talk can shape the way others perceive and treat you.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 放猫钓鱼
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
-老鼠们召开一次会议，以决定计划摆脱他们的敌人猫的困境。他们至少希望找到一些方法，能知道猫来临的时候，以便有时间逃走。的确，必须做些什么，因为他们生活在恐惧猫爪的持续恐惧中，晚上和白天他们几乎不敢走出他们的洞穴。许多计划都被讨论了，
+老鼠们召开一次会议，以决定计划摆脱他们的敌人猫的困境。他们至少希望找到一些方法，能知道猫来临的时候，以便有时间逃走。的确，必须做些什么，因为他们生活在恐惧猫爪的持续恐惧中，晚上和白天他们几乎不敢走出他们的洞穴。许多计划都被讨论了，但最后，老鼠们认识到，他们只有通过团结合作才能突破困境。
 
 ```{admonition} **寓意**
 :class: tip
-但最后，老鼠们认识到，他们只有通过团结合作才能突破困境。
-
-这篇文章的寓意是：只有团结合作，才能突破困境。
+> 
 
-<audio src='http://quantile.shangfr.site/fables/audio284_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+这篇文章的寓意是：只有团结合作，才能突破困境。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## BELLING THE CAT
 
@@ -317,35 +299,33 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 ```{admonition} **Moral**
 :class: tip
-It is one thing to say that something should be done, but quite a different matter to do it.
-
-<audio src='http://quantile.shangfr.site/fables/audio284.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is one thing to say that something should be done, but quite a different matter to do it.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猴子和猫
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 从前，一只猫和一只猴子住在同一个房子里，作为宠物。它们是好朋友，而且总是一起搞各种捣乱。它们最想做的，似乎是弄到点什么吃的，而这其中的方法并不重要。一天，它们坐在火炉旁，看着火炉上烤着的栗子。“怎么弄到它们呢？”这是一个问题。“我很乐意弄到它们，”狡猾的猴子说，“但是我不知道怎么做。”
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。
-
-<audio src='http://quantile.shangfr.site/fables/audio339_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章寓意是: 不管做什么，勇气和有趣的想法是成功的关键。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MONKEY AND THE CAT
 
@@ -353,35 +333,33 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 ```{admonition} **Moral**
 :class: tip
-The flatterer seeks some benefit at your expense.
-
-<audio src='http://quantile.shangfr.site/fables/audio339.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The flatterer seeks some benefit at your expense.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猫、公鸡和小老鼠
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 这只非常年幼的老鼠，从未见过世界上的任何事物，第一次冒险就差点儿受到损害。他给妈妈讲述了一则关于他的冒险故事：我正漫步着，安详地转过拐角，进入另一个院子时，就看到了两个奇怪的生物!其中一个神情亲切友善，但另一个则是你能想象到的最可怕的怪物，你该看到的就是一只发出诡异叫唤的猫!!
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。
-
-<audio src='http://quantile.shangfr.site/fables/audio352_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章提醒我们，没有经验的人应该慎重冒险，因为不可预测的风险可能会影响到他们的安全。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE CAT, THE COCK, AND THE YOUNG MOUSE
 
@@ -389,35 +367,33 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 ```{admonition} **Moral**
 :class: tip
-Do not trust alone to outward appearances.
-
-<audio src='http://quantile.shangfr.site/fables/audio352.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Do not trust alone to outward appearances.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 猫和鸟
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一只猫正在变得非常瘦。正如你猜到的,他没有吃够。有一天,他听说附近有一些鸟类生病了,需要看病。于是他戴上一副眼镜,手里拿着一个皮箱,敲响鸟类家里的门。鸟儿们吱吱叫,博士猫带着极大的关心问他们怎么样了。他很乐意给他们开药。唧唧嗤嗤,鸟儿们笑了起来。你
 
 ```{admonition} **寓意**
 :class: tip
-需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。
-
-<audio src='http://quantile.shangfr.site/fables/audio365_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 需要献出爱心，去帮助那些需要帮助的人，而不忘记自己也要给自己充足的养分。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE CAT AND THE BIRDS
 
@@ -425,35 +401,33 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 ```{admonition} **Moral**
 :class: tip
-Be wise and shun the quack.
-
-<audio src='http://quantile.shangfr.site/fables/audio365.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Be wise and shun the quack.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 老鼠和猫
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 从前有只猫，它十分警觉，老鼠几乎不敢把他的胡须伸出来，怕被它活活吃掉。那只猫好像无处不在，爪子也随时准备一下抓住老鼠。最后，老鼠们都守在洞里，猫也知道只能玩个聪明计谋才能抓住它们。于是，有一天猫爬上了架子，头朝下悬挂着，好像死在那里，老鼠们立刻从洞里出来，跑到它身边看，但是猫却一下子跳了起来，抓着老鼠！
 
 ```{admonition} **寓意**
 :class: tip
-这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。
-
-<audio src='http://quantile.shangfr.site/fables/audio407_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 这篇文章蕴含的寓意是：聪明的打算总能战胜无知，智慧必胜力量。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE CAT AND THE OLD RAT
 
@@ -461,13 +435,13 @@ There was once a Cat who was so watchful, that a Mouse hardly dared show the tip
 
 ```{admonition} **Moral**
 :class: tip
-The wise do not let themselves be tricked a second time.
-
-<audio src='http://quantile.shangfr.site/fables/audio407.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The wise do not let themselves be tricked a second time.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
