--- a/docs/source/fables/老鼠.md
+++ b/docs/source/fables/老鼠.md
@@ -4,21 +4,19 @@
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 老鼠们因为经常被猫袭击，对此感到十分苦恼。于是，他们在一起开会，商量用什么办法对付猫的骚扰，以求平安。几个建议相继都被否决之后，一只很有威望且经验丰富的老鼠站起来，说："我忽然想到一个办法，可以确保大家未来的安全，假如你们赞成的话，我们就这么办。这个办法是，我们应该在敌人的脖子上挂一个铃铛，猫走路时发出的叮当声，就会警告我们猫要来了。"他的提议受到了大家的赞同，都决定采用这个办法，就在这时，一只年长的老鼠伸出他的前爪，说："我也赞同这是一个绝妙的好办法，但是，我想问一下，谁去给猫系铃铛呢？"
 
 ```{admonition} **寓意**
 :class: tip
-解决问题一定要有一个切合实际的方法。
-
-<audio src='http://quantile.shangfr.site/fables/audio5_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 解决问题一定要有一个切合实际的方法。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio5_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MICE IN COUNCIL
 
@@ -26,35 +24,33 @@ Once upon a time all the Mice met together in Council, and discussed the best me
 
 ```{admonition} **Moral**
 :class: tip
-It is one thing to propose, another to execute.
-
-<audio src='http://quantile.shangfr.site/fables/audio5.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> It is one thing to propose, another to execute.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio5.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 狮子与报恩的老鼠
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 狮子在自己的窝里睡着了，却被一只跑到他脸上的老鼠吵醒了。狮子非常生气，用爪子抓住老鼠，准备弄死他。战战兢兢的老鼠请求狮子饶了他的性命。"求你放了我吧，"老鼠哭喊道，"我肯定会报答你的恩情。"一个不足挂齿的小生命肯为自己做任何事，狮子被如此无意义的想法逗笑了，便随和地放他走了。不久，老鼠报恩的机会终于来了。有一天，狮子被猎人们布好的大网缠住了，愤怒地大吼起来，老鼠听到了狮子的哀嚎，迅速赶来。老鼠轻松地走过去开始噬咬绳索，很快就成功地放走了狮子。老鼠说："看吧！当我许诺要报答你时，你还嘲笑我；现在你可看到了，即便一只小老鼠也能帮助一头大狮子。"
 
 ```{admonition} **寓意**
 :class: tip
-即使一个人微小，也能够做出大事，报答他人恩情；不要看轻别人，要相信他们也有能力成就自己。
-
-<audio src='http://quantile.shangfr.site/fables/audio18_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 即使一个人微小，也能够做出大事，报答他人恩情；不要看轻别人，要相信他们也有能力成就自己。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio18_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE LION AND THE MOUSE
 
@@ -62,35 +58,33 @@ A Lion asleep in his lair was waked up by a Mouse running over his face. Losing 
 
 ```{admonition} **Moral**
 :class: tip
-Appearances can be deceiving and no act of kindness is ever too small to make a difference.
-
-<audio src='http://quantile.shangfr.site/fables/audio18.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> Appearances can be deceiving and no act of kindness is ever too small to make a difference.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio18.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 老鼠和公牛
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一头公牛被老鼠咬了鼻子，到处追赶老鼠。但是，老鼠可比公牛跑得快多了，一下就溜进了墙边的洞里。气得公牛一次又一次地撞墙，最后累得筋疲力尽，一下就瘫在了地上。这时，小老鼠一听没了动静，又跑出来再咬公牛。公牛狂怒，又开始用脚踢墙，而此时小老鼠早已跑回到洞里去了。除了大吼和无用的生闷气之外，公牛一筹莫展。不久，他听到一个微弱的声音从墙壁里传出来："你这个大家伙也不能总逞强吧，你看，有时我们这样的小不点也会占上风的。"
 
 ```{admonition} **寓意**
 :class: tip
-强者并非总是战争的胜方。
-
-<audio src='http://quantile.shangfr.site/fables/audio137_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 强者并非总是战争的胜方。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio137_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE MOUSE AND THE BULL
 
@@ -98,35 +92,33 @@ A Bull gave chase to a Mouse which had bitten him in the nose: but the Mouse was
 
 ```{admonition} **Moral**
 :class: tip
-The battle is not always to the strong.
-
-<audio src='http://quantile.shangfr.site/fables/audio137.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> The battle is not always to the strong.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio137.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
 ## 狮子和老鼠
 
 
 ::::{tab-set}
-
 :::{tab-item} 中文
 一天，狮子睡着了，一只小老鼠在他身上跑上跑下，把他吵醒了。狮子非常生气，用爪子抓住老鼠，准备吃掉它。“求你放了我吧，”老鼠哭喊道，“我永远不会忘记您的恩情的，说不准哪天我能帮上你什么忙呢。”一个不足挂齿的小生命要为自己做事，狮子被如此荒谬的想法逗笑了，于是抬起爪子放了它。不久，老鼠报恩的机会终于来了。有一天，狮子被猎人们布好的陷阱困住了，猎人们想要把活狮子献给国王，先把狮子捆在树上，去找四轮马车运走。这时，小老鼠碰巧路过，看到了狮子的悲惨处境，就走到狮子面前，很快就咬断了绑住这百兽之王的绳子。小老鼠说：“看我说的对吧？”
 
 ```{admonition} **寓意**
 :class: tip
-朋友虽小，也能帮上大忙。
-
-<audio src='http://quantile.shangfr.site/fables/audio295_cn.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> 朋友虽小，也能帮上大忙。  <p align='right'>[😺 不明白？问问伊索吧。](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 听寓言故事
 
+<audio src='http://quantile.shangfr.site/fables/audio295_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio> 
 :::
-
 :::{tab-item} English
 ## THE LION AND THE MOUSE
 
@@ -134,13 +126,13 @@ A Lion lay asleep in the forest, his great head resting on his paws. A timid lit
 
 ```{admonition} **Moral**
 :class: tip
-A kindness is never wasted.
-
-<audio src='http://quantile.shangfr.site/fables/audio295.mp3' preload='none' controls loop>你的浏览器不支持 audio 标签。</audio>
+> A kindness is never wasted.  <p align='right'>[😺 Not sure? Ask Aesop.](https://shangfr-aesopica-app-xr2547.streamlit.app/)</p>
 
 ```
 
+👇 Listen to this fable
 
+<audio src='http://quantile.shangfr.site/fables/audio295.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio> 
 :::
-
 ::::
+    
